[package]
name = "anonstake"
version = "0.1.0"
authors = ["Shashvat Srivastava <shashvat.sri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { path = "../../librustzcash/ff" }
bellman = { path = "../../librustzcash/bellman" }
pairing = { path = "../../librustzcash/pairing" }
rand = "0.7"
rand_core = "0.5.1"

[dev-dependencies]
hex-literal = "0.2"
rand = "0.7"
rand_xorshift = "0.2"
sha2 = "0.8"