[package]
name = "anonstake"
version = "0.1.0"
authors = ["Shashvat Srivastava <shashvat.sri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
bellman = { path = "../../librustzcash/bellman" }
blake2b_simd = "0.5"
blake2s_simd = "0.5"
ff = { path = "../../librustzcash/ff" }
libc = "0.2"
pairing = { path = "../../librustzcash/pairing" }
lazy_static = "1"
byteorder = "1"
rand_core = "0.5.1"
zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
zcash_proofs = { path = "../../librustzcash/zcash_proofs" }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "print_random_constants"
path = "src/generate_random_constants.rs"
